# php-tesseract

./: HowToCompilePhpTesseract.md  HowToInstallPhpTesseract.md  Makefile  Makefile.in  ProjectHome.md  autogen.sh  buildDeb  config.h.in  config.status  configure  configure.ac  configure.ac~  libtool  makefile.shsh  runme  test.php
autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
debian/: README.Debian  README.source  changelog  control  copyright  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  files  init.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  php-tesseract.cron.d.ex  php-tesseract.default.ex  php-tesseract.doc-base.EX  postinst.ex  postrm.ex  preinst.ex  prerm.ex  shlibs.local.ex  watch.ex
src/: Makefile  Makefile.am  Makefile.in  php_tesseract.h  tesseract.ini  tesseract.php  tesseract_wrap.cpp
src/.deps/: main_dummy.Plo  tesseract_wrap.Plo
